# DataRenderingApp

./: CMakeLists.txt  datareader.cpp  datareader.h  main.cpp  mainwindow.cpp  mainwindow.h  widget.cpp  widget.h
data/: waveform-data_v1.txt
tests/: test_datareader.cpp  test_widger.cpp
